@@ -11,7 +11,8 @@
 1.9 preview 4 (2011-01-??)
  + New: Support for CustomWmsMapSource (experimental)
  + Download bandwidth limitation selectable for very fast network connections
- ! Highest zoom level missing in tile store coverage zoom selector  
+ ! Highest zoom level missing in tile store coverage zoom selector
+ + New map sources: ArcGIS topo map/satellite/street map   
 
 1.9 preview 3 (2011-01-09)
  + New atlas format: PNG + Worldfile (PNG & PGW)
